// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reply passes props 1`] = `
<Commentable
  comment={
    Object {
      "body": "#BODY",
      "create": 0,
      "downvotes": 0,
      "upvotes": 0,
    }
  }
  foo="bar"
  owner={
    Object {
      "avatar": "#AVATAR",
      "username": "#USERNAME",
    }
  }
/>
`;

exports[`Reply renders default 1`] = `
<Commentable
  comment={
    Object {
      "body": "#BODY",
      "create": 0,
      "downvotes": 0,
      "upvotes": 0,
    }
  }
  owner={
    Object {
      "avatar": "#AVATAR",
      "username": "#USERNAME",
    }
  }
/>
`;
